--- a/public/offre_soumission.html
+++ b/public/offre_soumission.html
@@ -59,7 +59,7 @@
 							<i class="align-middle" data-feather="layers"></i>
 							<span class="align-middle">Gestion des données</span>
 						</a>
-						<div class="collapse show" id="submenu">
+						<div class="collapse" id="submenu">
 							<ul class="sidebar-dropdown list-unstyled">
 								<li class="sidebar-item">
 									<a class="sidebar-link" href="lotissements.html">
@@ -73,7 +73,7 @@
 										<span class="align-middle">Participants</span>
 									</a>
 								</li>
-								<li class="sidebar-item active">
+								<li class="sidebar-item">
 									<a class="sidebar-link" href="lots.html">
 										<i class="align-middle" data-feather="circle"></i>
 										<span class="align-middle">Lots</span>
@@ -89,7 +89,7 @@
 							<i class="align-middle" data-feather="layers"></i>
 							<span class="align-middle">Gestion des soumissions</span>
 						</a>
-						<div class="collapse" id="submenu2">
+						<div class="collapse show" id="submenu2">
 							<ul class="sidebar-dropdown list-unstyled">
 								<li class="sidebar-item">
 									<a class="sidebar-link" href="appel_offre.html">
@@ -97,7 +97,7 @@
 										<span class="align-middle">Appels d'offres</span>
 									</a>
 								</li>
-								<li class="sidebar-item">
+								<li class="sidebar-item active">
 									<a class="sidebar-link" href="offre_soumission.html">
 										<i class="align-middle" data-feather="circle"></i>
 										<span class="align-middle">Offre de soumission</span>
