--- a/public/appel_offre.html
+++ b/public/appel_offre.html
@@ -62,13 +62,19 @@
 						<div class="collapse" id="submenu">
 							<ul class="sidebar-dropdown list-unstyled">
 								<li class="sidebar-item">
-									<a class="sidebar-link" href="#">
+									<a class="sidebar-link" href="lotissements.html">
 										<i class="align-middle" data-feather="circle"></i>
 										<span class="align-middle">Lotissements</span>
 									</a>
 								</li>
 								<li class="sidebar-item">
-									<a class="sidebar-link" href="#">
+									<a class="sidebar-link" href="vocation.html">
+										<i class="align-middle" data-feather="circle"></i>
+										<span class="align-middle">Vocation</span>
+									</a>
+								</li>
+								<li class="sidebar-item">
+									<a class="sidebar-link" href="participants.html">
 										<i class="align-middle" data-feather="circle"></i>
 										<span class="align-middle">Participants</span>
 									</a>
@@ -79,6 +85,7 @@
 										<span class="align-middle">Lots</span>
 									</a>
 								</li>
+								
 							</ul>
 						</div>
 					</li>
@@ -99,7 +106,13 @@
 								<li class="sidebar-item">
 									<a class="sidebar-link" href="offre_soumission.html">
 										<i class="align-middle" data-feather="circle"></i>
-										<span class="align-middle">Offre de soumission</span>
+										<span class="align-middle">Retrait cahier de charge</span>
+									</a>
+								</li>
+								<li class="sidebar-item">
+									<a class="sidebar-link" href="appel_offre_lotissement.html">
+										<i class="align-middle" data-feather="circle"></i>
+										<span class="align-middle">Appel offre / Lotissement</span>
 									</a>
 								</li>
 							</ul>
@@ -194,18 +207,6 @@
 														aria-hidden="true"></span>
 												</div>
 											</div>
-
-                                            <div class="col-md-6">
-												<div class="form-group">
-													<label for="lotissement_select" class="form-label">Lotissement</label>
-													<select class="form-control" id="lotissement_select">
-														<option value="">Select Lotissement</option>
-														<option value="1">Lotissement A</option>
-														<option value="2">Lotissement B</option>
-														<option value="3">Lotissement C</option>
-													</select>
-												</div>
-											</div>
 											<div class="col-md-12 stbtn">
 												<div class="form-group">
 													<button type="button" id="save_appel_offre"
@@ -235,7 +236,6 @@
 													<th scope="col">Numéro appel d'offre</th>
 													<th scope="col">Date création</th>
 													<th scope="col">Date limite</th>
-													<th scope="col">Lotissement</th>
 													<th scope="col">Responsable</th>
 													<th scope="col"></th>
 													<th scope="col"></th>
