--- a/public/lots.html
+++ b/public/lots.html
@@ -68,6 +68,12 @@
 									</a>
 								</li>
 								<li class="sidebar-item">
+									<a class="sidebar-link" href="vocation.html">
+										<i class="align-middle" data-feather="circle"></i>
+										<span class="align-middle">Vocation</span>
+									</a>
+								</li>
+								<li class="sidebar-item">
 									<a class="sidebar-link" href="participants.html">
 										<i class="align-middle" data-feather="circle"></i>
 										<span class="align-middle">Participants</span>
@@ -100,7 +106,13 @@
 								<li class="sidebar-item">
 									<a class="sidebar-link" href="offre_soumission.html">
 										<i class="align-middle" data-feather="circle"></i>
-										<span class="align-middle">Offre de soumission</span>
+										<span class="align-middle">Retrait cahier de charge</span>
+									</a>
+								</li>
+								<li class="sidebar-item">
+									<a class="sidebar-link" href="appel_offre_lotissement.html">
+										<i class="align-middle" data-feather="circle"></i>
+										<span class="align-middle">Appel offre / Lotissement</span>
 									</a>
 								</li>
 							</ul>
@@ -161,13 +173,11 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="form-group">
-													<label for="lotissement_select" class="form-label">Lotissement</label>
-													<select class="form-control" id="lotissement_select">
-														<option value="">Select Lotissement</option>
-														<option value="1">Lotissement A</option>
-														<option value="2">Lotissement B</option>
-														<option value="3">Lotissement C</option>
-													</select>
+													<label for="code_lot" class="form-label">Code lot</label>
+													<input class="form-control" type="text" id="code_lot"
+														placeholder="Code lot">
+													<span class="fa fa-user form-control-feedback"
+														aria-hidden="true"></span>
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -177,6 +187,13 @@
 														placeholder="Nom lot">
 													<span class="fa fa-user form-control-feedback"
 														aria-hidden="true"></span>
+												</div>
+											</div>
+											<div class="col-md-6">
+												<div class="form-group">
+													<label for="lotissement_select" class="form-label">Lotissement</label>
+													<select class="form-control" id="lotissement_select">
+													</select>
 												</div>
 											</div>
                                             <div class="col-md-6">
@@ -190,11 +207,9 @@
 											</div>
                                             <div class="col-md-6">
 												<div class="form-group">
-													<label for="Vocation" class="form-label">Vocation</label>
-													<input class="form-control" type="text" id="vocation"
-														placeholder="Vocation">
-													<span class="fa fa-user form-control-feedback"
-														aria-hidden="true"></span>
+													<label for="lotissement_select" class="form-label">Vocation</label>
+													<select class="form-control" id="vocation_select">
+													</select>
 												</div>
 											</div>
                                             <div class="col-md-12">
@@ -228,6 +243,7 @@
 										<table class="table table-sm" id="lots_table">
 											<thead>
 												<tr>
+													<th scope="col">Code lot</th>
 													<th scope="col">Lotissement</th>
 													<th scope="col">Nom lot</th>
 													<th scope="col">Surface</th>
