--- a/public/offre_soumission.html
+++ b/public/offre_soumission.html
@@ -68,6 +68,12 @@
 									</a>
 								</li>
 								<li class="sidebar-item">
+									<a class="sidebar-link" href="vocation.html">
+										<i class="align-middle" data-feather="circle"></i>
+										<span class="align-middle">Vocation</span>
+									</a>
+								</li>
+								<li class="sidebar-item">
 									<a class="sidebar-link" href="participants.html">
 										<i class="align-middle" data-feather="circle"></i>
 										<span class="align-middle">Participants</span>
@@ -100,7 +106,13 @@
 								<li class="sidebar-item active">
 									<a class="sidebar-link" href="offre_soumission.html">
 										<i class="align-middle" data-feather="circle"></i>
-										<span class="align-middle">Offre de soumission</span>
+										<span class="align-middle">Retrait cahier de charge</span>
+									</a>
+								</li>
+								<li class="sidebar-item">
+									<a class="sidebar-link" href="appel_offre_lotissement.html">
+										<i class="align-middle" data-feather="circle"></i>
+										<span class="align-middle">Appel offre / Lotissement</span>
 									</a>
 								</li>
 							</ul>
@@ -153,7 +165,7 @@
 						<div class="col-12">
 							<div class="card border">
 								<div class="card-header">
-									<h5 class="card-title">Offre de soumission</h5>
+									<h5 class="card-title">Retrait cahier de charge</h5>
 								</div>
 								<div class="card-body">
 									<form>
@@ -206,7 +218,7 @@
 						<div class="col-12">
 							<div class="card border">
 								<div class="card-header">
-									<h5 class="card-title">Lots</h5>
+									<h5 class="card-title">Retrait cahier de charge</h5>
 								</div>
 								<div class="card-body">
 									<div class="table-responsive-sm">
